squashing bugs

--- a/app/style.css
+++ b/app/style.css
@@ -98,6 +98,10 @@ h3 {
   color: #999999;
 }
 
+#homepage p::first-letter {
+  text-transform: capitalize;
+}
+
 td {
   border: 1px solid red;
 }
@@ -105,7 +109,6 @@ td {
 li {
   color: #EFECCA;
 }
-
 
 .item-result {
   overflow:hidden;
@@ -185,4 +188,8 @@ li {
 
 #footer p, #footer a {
   color: #EFECCA;
+}
+
+#noRest {
+  color: #405952;
 }
